# nonuple-cartpole

./: .gitattributes  .gitignore  README.md  pyproject.toml  reproduce_n9.py
.github/workflows/: tests.yml
configs/: env-base.yaml  nominal.py
docs/: METHOD.md  PRIOR_ART.md
results/: gate_n9_preroll_seed12345.json  gate_n9_preroll_seed2024.json  gate_n9_preroll_seed777.json  nom_n9_4ms_wv6en4.npz  nom_n9_dense1ms_wv6en4.npz  nom_n9_gluck.npz  verify_n9_solve_seed12345.json
scripts/: _n9_oneshot_wv.py  demo_nonuple.py  fast_pieces.py  fast_trajopt.py  gate_n9_preroll.py  gluck_n9_from_n8.py  gluck_swingup2.py  verify_n9_solve.py
src/cartpole_race/: collocation.py  evidence.py  falsification.py  fast_colloc.py  fast_rollout.py  input_shaping.py  mapper.py  ppo.py  predicate.py  release.py  rl_env.py  torch_dynamics.py
tests/: conftest.py  test_discrete_tvlqr_monodromy.py  test_linearization.py  test_nominal_consistency.py  test_predicate.py  test_release_evidence.py  test_release_stack.py
