[project]
name = "nonuple-cartpole"
version = "1.0.0"
description = "Saved-nominal N9 cart-pole replay with auditable banked evidence."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11, <3.13"
dependencies = [
    "casadi==3.7.2",
    "matplotlib==3.10.9",
    "numpy==2.4.6",
    "pydantic==2.13.4",
    "pyyaml==6.0.2",
    "scipy==1.17.1",
]

[project.scripts]
n9-demo = "cartpole_race.release:demo_main"
n9-verify = "cartpole_race.release:verify_main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff==0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cartpole_race"]

[tool.pytest.ini_options]
addopts = "-q --import-mode=importlib"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
